init websocket + genesis block with transaction to init balance for an address + faucet to get free coin
