# src/routes/faucet.route.ts
@@ -1,0 +1,8 @@
+import express from "express";
+import { requestInitialFunds } from "../controllers/faucet.controller";
+
+const router = express.Router();
+
+router.post("/", requestInitialFunds);
+
+export default router;
